# app-call

./: Cargo.toml  README.md  fix-vm.ps1  install.bat  install.ps1  install.sh  start.bat  start.ps1  start.sh
.github/workflows/: release.yml
.tmp-dev-data/: identity.json
apps/desktop/: Cargo.toml
apps/desktop/src/: main.rs
crates/app-core/: Cargo.toml
crates/app-core/src/: bootstrap.rs  identity.rs  lib.rs  model.rs  network.rs  privacy.rs  seed.rs  updater.rs  user_settings.rs
docs/: technical-blueprint.md
