[package]
name = "desktop"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
app-core = { path = "../../crates/app-core" }
tokio = { version = "1", features = ["rt-multi-thread", "io-util", "net", "sync", "macros"] }

[target.'cfg(target_os = "linux")'.dependencies]
eframe = { version = "0.29.1", default-features = false, features = ["default_fonts", "glow", "x11", "wayland"] }

[target.'cfg(target_os = "windows")'.dependencies]
eframe = { version = "0.29.1", default-features = false, features = ["default_fonts", "wgpu", "glow"] }


