[package]
name = "app-core"
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
rand = "0.8.5"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
