[package]
name = "app-core"
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
flate2 = "1"
rand = "0.8.5"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "blocking"] }
semver = "1"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
self-replace = "1"
sha2 = "0.10"
tar = "0.4"
tokio = { version = "1", features = ["full", "fs"] }
uuid = { version = "1", features = ["v4"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }

[target.'cfg(target_os = "windows")'.dependencies]
zip = "2"
